# notes-on-reversing-the-sabetour

./: .gitignore  AGENTS.md  LICENSE  README.md
.claude/: settings.json
.github/workflows/: release-tools.yml
data/: havok_version_evidence.txt  lua_bindings.txt  lua_registration_map.tsv  rtti_classes_all.txt  ws_engine_classes.txt
data/symbol_map/: README.md  pc_symbol_map.tsv  pc_vtables.tsv
docs/: binary_recon.md  community_tooling.md  lineage_and_divergence.md  mattias_port_plan.md
docs/formats/: animation_havok65.md  archive_and_models.md  audio_1kcp.md  dtex_texture.md  gametemplates.md  gametext.md  lua_scripts.md  map6.md  megapack_key_derivation.md  megapack_write.md  mesh_geometry.md  sbla_subpack.md  world_megapack_key.md
docs/sab-engine-lua-seam/: 00-seam-overview.md  01-registration-and-dispatch.md  02-marshalling-abi.md  03-handle-and-object-model.md  04-vm-lifecycle-and-script-objects.md  05-engine-to-lua-callbacks.md  06-lua-side-wrapper-layer.md  10-family-actor-human.md  11-family-ai-squad-combat.md  12-family-suspicion-wtf-alarm.md  13-family-vehicle-train-plane.md  14-family-navigation-movement.md  15-family-mission-objective-task.md  16-family-world-zone-interior.md  17-family-sound-voice-conversation.md  18-family-cinematics-camera-face.md  19-family-ui-hud-tutorial.md  20-family-inventory-perks-shop.md  21-family-utility-saveload-object.md  22-family-attraction-focus-sabotage-points.md  23-family-render-weather-fx.md  99-gaps-and-next-steps.md  README.md
docs/saboteur-luacd/src/Experimental/: AttackAction.lua  Checkpoint.lua  Checkpoint_v2.lua  Civ_Combat.lua  Civ_Idle_MillingTest.lua  Counter.lua  DeathWatcher.lua  Enabler.lua  Human_Idle.lua  IdleCiv.lua  IdleNaziGrunt.lua  LocatorScriptController.lua  MISSION_CFrench.lua  MISSION_DSimmons.lua  MISSION_JBiegel.lua  MISSION_MFindley.lua  MISSION_MMarzola.lua  MISSION_MTipul.lua  MISSION_Random.lua  MISSION_SGillies.lua  MISSION_TAbernathy.lua  MISSION_ZRosencrantz.lua  MgrHarasser.lua  MgrVendor.lua  MoveToObjectAction.lua  NaziGeneralBase01_WE.lua  NaziTest_Combat.lua  NaziTest_Idle.lua  ScriptHelper.lua  SoldierState_Combat.lua  SoldierState_Configure.lua  SoldierState_Hunt.lua  SoldierState_Idle.lua  SoldierState_Investigate.lua  SoldierState_InvestigateThreat.lua  SoldierState_PaperCheckBackup.lua  SoldierState_PaperCheckLeader.lua  Soldier_Broadcasts.lua  Soldier_Callbacks.lua  Soldier_Events.lua  (+5 more)
docs/saboteur-luacd/src/Includes/: List.lua  WRAPPER_Actor.lua  WRAPPER_Event.lua  WRAPPER_Util.lua  WRAPPER_Vehicle.lua  __SabMissionIncludes.lua  __UtilFunctions.lua
docs/saboteur-luacd/src/Managers/: AchievementsManager.lua  GlobalMissionFile.lua  InteriorManager.lua  RewardsManager.lua  Sab_Message_Template.lua  Sab_Mission_Template.lua  ShopManager.lua  StarterManager.lua  WorldSMEDNodes.lua
docs/saboteur-luacd/src/Missions/: Act_1_BarFight.lua  Act_1_ConnectToBar.lua  Act_1_Escape.lua  (+143 more)
docs/symbol_map/: README.md  ai-behavior.md  animation.md  camera.md  cinematics.md  damage-physics.md  hud-ui.md  human-disguise.md  mission-objective.md  progression.md  render-fx-light.md  sound.md  suspicion-wtf.md  task-managers.md  vehicle-train.md  world-water.md
docs/tools/: README.md
docs/tools/workflows/: add-ui-text.md  port-a-character.md  replace-a-texture.md
memory/: MEMORY.md  animation-100pct-spline.md  animation-havok65-gap.md  archive-and-patch-megapack.md  audio-1kcp-wwise.md  clean-binary-and-symbols.md  community-contribution-plan.md  decomp-assertion-strings.md  havok65-spline-decode.md  lua-luap-packs.md  operating-model-and-modding.md  prototype-symbols-goldmine.md  symbol-map-methodology.md  vmx128-xenon-decomp.md
output/: README.md
tools/: decompile_luascripts.py  dump_lua_registration.py  extract_trackmap.py  json_to_skel.py  merge_smsh.py  rtti_symbol_map.py
tools/ghidra/: DecompileSaboteur.java  README.md
tools/sab_animmeta/: Cargo.toml  README.md
tools/sab_animmeta/src/: main.rs
tools/sab_asi/: Cargo.toml  README.md
tools/sab_asi/.cargo/: config.toml
tools/sab_asi/src/: lib.rs
tools/sab_dtex/: Cargo.toml  README.md
tools/sab_dtex/src/: main.rs
tools/sab_formats/: Cargo.toml
tools/sab_formats/src/: dtex.rs  gametemplates.rs  gametext.rs  lib.rs  megapack.rs  mesh.rs  sbla.rs
tools/sab_gametemplates/: Cargo.toml  GAMETEMPLATES_FORMAT.md  README.md
tools/sab_gametemplates/src/: main.rs
tools/sab_gametext/: Cargo.toml  README.md
tools/sab_gametext/src/: main.rs
tools/sab_havok65/: Cargo.toml  README.md
tools/sab_havok65/src/: gltf.rs  main.rs
tools/sab_map6/: Cargo.toml  README.md
tools/sab_map6/src/: main.rs
tools/sab_megapack_key/: Cargo.toml
tools/sab_megapack_key/src/: main.rs
tools/sab_mesh/: Cargo.toml  MESH_GEOMETRY_FORMAT.md  README.md
tools/sab_mesh/src/: main.rs
tools/sab_pack/: Cargo.toml  MEGAPACK_WRITE_FORMAT.md  README.md
tools/sab_pack/src/: main.rs
tools/sab_poc/: Cargo.toml  README.md
tools/sab_poc/src/: albs.rs  deploy.rs  dtex.rs  gltf.rs  inventory.rs  main.rs  mesh.rs  pack.rs  repack.rs  tex.rs  wsao.rs
tools/sab_probe/: Cargo.toml  README.md
tools/sab_probe/src/: main.rs  tex.rs  texbind.rs
tools/sab_sbla/: Cargo.toml  README.md  SBLA_SUBPACK_FORMAT.md
tools/sab_sbla/src/: main.rs
tools/sab_skeleton/: Cargo.toml  README.md  SKELETON_FORMAT.md
tools/sab_skeleton/src/: main.rs
tools/sab_validator/: Cargo.toml  README.md
tools/sab_validator/src/: consume.rs  main.rs  report.rs
tools/sab_workshop/: Cargo.toml  README.md
tools/sab_workshop/src/: anim_index.rs  app.rs  assets.rs  bone_names.rs  boot.rs  camera.rs  dtex.rs  editor.rs  formats.rs  gui.rs  havok.rs  main.rs  meshload.rs  models.rs  pack.rs  render.rs  resolve.rs  settings.rs  skinning.rs  wsao.rs
tools/saboteur_audio/: Cargo.toml
tools/saboteur_audio/src/: main.rs
tools/saboteur_lua/: Cargo.toml
tools/saboteur_lua/src/: main.rs
tools/xsym/: body_names.py  build_360.py  build_pc.py  clean_asserts.py  demangle.py  extract_asserts.py  finalize.py  join.py  parse_docs_oracle.py  pe.py  validate_vtptr.py
(+114 files in other folders)
