[package]
name = "sab_workshop"
version = "0.1.0"
edition = "2021"
description = "Native wgpu+egui viewer for The Saboteur characters: skinned mesh + searchable animation playback."
license = "MIT"

[[bin]]
name = "sab_workshop"
path = "src/main.rs"

[dependencies]
# Window + GPU + UI. This exact set (winit 0.29 / wgpu 0.20 / egui 0.28) mirrors the
# Mercs2 workshop; the egui<->winit event bridge is hand-rolled (src/gui.rs) because
# egui-winit 0.28 pins winit 0.30, which conflicts with winit 0.29.
winit = "0.29"
wgpu = "0.20"
egui = "0.28"
egui-wgpu = "0.28"
glam = "0.27"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
