[package]
name = "sab_workshop"
version = "0.1.0"
edition = "2021"
description = "Native wgpu+egui viewer for The Saboteur characters: skinned mesh + searchable animation playback."
license = "MIT"

[[bin]]
name = "sab_workshop"
path = "src/main.rs"

[dependencies]
# Window + GPU + UI. This exact set (winit 0.29 / wgpu 0.20 / egui 0.28) mirrors the
# Mercs2 workshop; the egui<->winit event bridge is hand-rolled (src/gui.rs) because
# egui-winit 0.28 pins winit 0.30, which conflicts with winit 0.29.
winit = "0.29"
wgpu = "0.20"
egui = "0.28"
egui-wgpu = "0.28"
glam = "0.27"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# DTEX textures store their mip payload as zlib streams (same as the game). Decode path copied
# into src/dtex.rs from tools/sab_dtex.
flate2 = "1"
# OS clipboard for the inspector's copy actions — the hand-rolled egui bridge must deliver egui's
# PlatformOutput.copied_text itself (egui-winit would normally do this). See src/gui.rs.
arboard = "3"
# Shared Saboteur format codecs for the mod-editor pages: GameText.dlg (Cinematics/Dialog/<Lang>)
# and GameTemplates.wsd (AULB). Both byte-verified against retail. See src/editor.rs.
sab_formats = { path = "../sab_formats" }
# Memory-map the megapacks so opening a 715 MB pack is instant (no eager read) and only the sub-pack
# headers / bundles actually touched fault into RAM — the index is the earmark. See src/pack.rs.
memmap2 = "0.9"

[dev-dependencies]
# Read the cmap of the fonts we ship, so `gui::theme::tests::glyphs_are_covered` can prove every UI
# symbol is actually drawable. Not a new download: egui already pulls this in via ab_glyph.
ttf-parser = "0.25"

[profile.release]
opt-level = 3
